2014-09-24  Gavin Smith  <gavinsmith0123@gmail.com>

	* info/doc.h (InfoCommand): Removed.  All uses updated.
	(FUNCTION_DOC): Comments added.

	* doc/info-stnd.texi (Miscellaneous Commands, Cursor Commands): Fix
	minor typos.

2014-09-22  Gavin Smith  <gavinsmith0123@gmail.com>

	* info/session.c (info_dispatch_on_key): Don't set 
	ea_last_executed_command.
	(info_numeric_arg_digit_loop): Don't declare with 
	DECLARE_INFO_COMMAND.
	* info/echo-area.c (ea_last_executed_command): Declared static.
	(read_and_dispatch_in_echo_area): Set ea_last_executed_command.

2014-09-21  Gavin Smith  <gavinsmith0123@gmail.com>

	* info/session.c (info_read_dispatch): Return pointer to function 
	implementing Info command instead of calling it.  All callers updated.

2014-09-18  Gavin Smith  <gavinsmith0123@gmail.com>

	* info/session.c (info_select_reference): When following a reference
	in a footnotes window, try to switch to a window containing a node
	from the file.
	* info/display.c (display_update_window_1): Turn off standout mode
	if we are still in it by the time we get to the bottom of the window.

	* info/t/Init-inter.inc: Don't hang if the process doesn't appear.

2014-09-16  Gavin Smith  <gavinsmith0123@gmail.com>

	* info/indices.c (info_index_apropos): Mark apropos node with
	N_Unstored.
	(info_indices_of_file_buffer): Free index_index variable before
	overwriting it.
	(apropos_in_all_indices): Free return value of get_dir_node before
	returning.

2014-09-15  Gavin Smith  <gavinsmith0123@gmail.com>

	* doc/info-stnd.text (Scrolling Commands): PageUp and PageDown can
	change the node (changed in 4.12 release).

2014-09-14  Gavin Smith  <gavinsmith0123@gmail.com>

	* info/nodes.h (N_Unstored): New flag.
	* info/session.c (info_split_window): Copy 'nodename' and 'references'
	fields if node is marked with N_Unstored, instead of N_IsInternal.
	* info/nodemenu.c (list_visted_nodes),
	* info/indices.c (info_virtual_index),